fix overflow value

--- a/src/mdl-extension/dialog/_dialog.scss
+++ b/src/mdl-extension/dialog/_dialog.scss
@@ -64,7 +64,7 @@
     max-height: 70vh;
     max-height: calc(70vh - 52px - 68px);
     overflow: auto;
-    overflow-x: none;
+    overflow-x: hidden;
 }
 
 /*
